refactor(leaderboard): use Math.clamp and bump SDK to 2.4.1